--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Introduction to My Portfolio - Er Yashkumar Jani" />
+  <meta name="description" content="Introduction to My Portfolio - Er Yashkumar Jani | MERN Stack Developer." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/eryashkumarjani.JPG" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -22,7 +22,18 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Welcome to My Portfolio - Er Yashkumar Jani</title>
+  <!--  Essential META Tags -->
+  <meta property="og:title" content="European Travel Destinations">
+  <meta property="og:type" content="article" />
+  <meta property="og:image" content="http://euro-travel-example.com/thumbnail.jpg">
+  <meta property="og:url" content="http://euro-travel-example.com/index.htm">
+  <meta name="twitter:card" content="summary_large_image">
+
+  <!--  Non-Essential, But Recommended -->
+  <meta property="og:description" content="Offering tour packages for individuals or groups.">
+  <meta property="og:site_name" content="European Travel, Inc.">
+  <meta name="twitter:image:alt" content="Alt text for image">
+  <title>Welcome to My Portfolio.</title>
   <script src="https://kit.fontawesome.com/868175e879.js" crossorigin="anonymous"></script>
 </head>
 
