--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,16 +23,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <!--  Essential META Tags -->
-  <meta property="og:title" content="European Travel Destinations">
+  <meta property="og:title" content="Welcome to My Portfolio.">
   <meta property="og:type" content="article" />
-  <meta property="og:image" content="http://euro-travel-example.com/thumbnail.jpg">
-  <meta property="og:url" content="http://euro-travel-example.com/index.htm">
-  <meta name="twitter:card" content="summary_large_image">
+  <meta property="og:image" content="%PUBLIC_URL%/eryashkumarjani.JPG">
+  <meta property="og:url" content="https://eryashkumarjani-portfolio.netlify.app/">
 
   <!--  Non-Essential, But Recommended -->
-  <meta property="og:description" content="Offering tour packages for individuals or groups.">
-  <meta property="og:site_name" content="European Travel, Inc.">
-  <meta name="twitter:image:alt" content="Alt text for image">
+  <meta property="og:description" content="Introduction to My Portfolio - Er Yashkumar Jani | MERN Stack Developer.">
+  <meta property="og:site_name" content="eryashkumarjani-portfolio">
   <title>Welcome to My Portfolio.</title>
   <script src="https://kit.fontawesome.com/868175e879.js" crossorigin="anonymous"></script>
 </head>
