--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Introduction to My Portfolio - Er Yashkumar Jani | MERN Stack Developer." />
+  <meta name="description" content="Er Yashkumar Jani | MERN Stack Developer." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/eryashkumarjani.JPG" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -29,7 +29,7 @@
   <meta property="og:url" content="https://eryashkumarjani-portfolio.netlify.app/">
 
   <!--  Non-Essential, But Recommended -->
-  <meta property="og:description" content="Introduction to My Portfolio - Er Yashkumar Jani | MERN Stack Developer.">
+  <meta property="og:description" content="Er Yashkumar Jani | MERN Stack Developer.">
   <meta property="og:site_name" content="eryashkumarjani-portfolio">
   <title>Welcome to My Portfolio.</title>
   <script src="https://kit.fontawesome.com/868175e879.js" crossorigin="anonymous"></script>
