--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,7 +25,7 @@
   <!--  Essential META Tags -->
   <meta property="og:title" content="Welcome to My Portfolio.">
   <meta property="og:type" content="article" />
-  <meta property="og:image" content="%PUBLIC_URL%/favicon.ico">
+  <meta property="og:image" content="%PUBLIC_URL%/eryashkumarjani.JPG">
   <meta property="og:url" content="https://eryashkumarjani-portfolio.netlify.app/">
 
   <!--  Non-Essential, But Recommended -->
